# audio-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
jamodio-agent/: Cargo.toml  entitlements.plist  info.plist  tauri.conf.json
jamodio-agent/capabilities/: default.json
jamodio-agent/icons/: icon.icns
jamodio-agent/icons/src/: regenerate.sh
jamodio-agent/src/: main.rs  pipeline.rs  ws_server.rs
jamodio-agent/src/audio/: capture.rs  device.rs  mod.rs  playback.rs
jamodio-agent/ui/: index.html  style.css
jamodio-audio-core/: Cargo.toml
jamodio-audio-core/src/: lib.rs  protocol.rs
jamodio-audio-core/src/codec/: decoder.rs  encoder.rs
jamodio-audio-core/src/mixer/: mixer.rs  mod.rs  ring_buffer.rs
jamodio-audio-core/src/net/: mod.rs  rtp.rs  srtp.rs  udp.rs
jamodio-audio-core/src/sync/: drift.rs
