[package]
name = "jamodio-agent"
version = "0.1.2"
edition = "2021"
description = "Jamodio Desktop Audio Agent — low-latency ASIO/CoreAudio bridge"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
jamodio-audio-core = { path = "../jamodio-audio-core" }
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Tauri v2
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"

# ASIO support on Windows
[target.'cfg(windows)'.dependencies]
cpal = { version = "0.15", features = ["asio"] }
