[package]
name = "jamodio-audio-core"
version = "0.1.0"
edition = "2021"
description = "Jamodio audio engine core — Opus codec, RTP, UDP, mixer, jitter buffer"

[dependencies]
audiopus = "0.3.0-rc.0"    # Opus encode/decode (safe wrapper around libopus)
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync"] }
crossbeam-channel = "0.5"  # Lock-free channels (audio thread ↔ network thread)
ringbuf = "0.4"            # SPSC lock-free ring buffer (jitter management)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"            # Setsockopt IP_TOS pour DSCP EF marking
