[package]
name = "jamodio-audio-core"
version = "0.1.3"
edition = "2021"
description = "Jamodio audio engine core — Opus codec, RTP, UDP, mixer, jitter buffer"

[dependencies]
audiopus = "0.3.0-rc.0"    # Opus encode/decode (safe wrapper around libopus)
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync"] }
crossbeam-channel = "0.5"  # Lock-free channels (audio thread ↔ network thread)
ringbuf = "0.4"            # SPSC lock-free ring buffer (jitter management)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"            # Setsockopt IP_TOS pour DSCP EF marking
base64 = "0.22"            # Encode/decode des clés SRTP (mediasoup wire format)
getrandom = "0.2"          # Génération de clés SRTP cryptographiquement sûres

# SRTP — chiffrement+auth du flux RTP agent ↔ SFU (AEAD AES-256-GCM).
# Stratégie par plateforme :
#
#   macOS / Linux : libsrtp2 + OpenSSL VENDORÉS (compilés depuis sources).
#                   → binaire 100 % autonome, aucune dep système chez l'utilisateur.
#                   Coût : 1er build long (~5 min pour OpenSSL), ensuite caché.
#                   Note CI : le `./configure` de libsrtp2 ne sait pas cross-compiler
#                   macOS arm64 → x86_64 ; le runner CI Intel (macos-13) build natif.
#
#   Windows       : libsrtp + OpenSSL via VCPKG (pas de cross-compile from-source
#                   supporté par srtp2-sys sur MSVC). Requiert un step CI
#                   `vcpkg install libsrtp openssl` avant le build.
[target.'cfg(not(windows))'.dependencies]
srtp = { version = "0.7", default-features = false, features = ["bytes", "log", "build-libsrtp", "build-openssl"] }

[target.'cfg(windows)'.dependencies]
srtp = { version = "0.7", default-features = false, features = ["bytes", "log", "enable-openssl"] }
